--- a/spring-boot-microservice-3-api-gateway/src/main/resources/application.properties
+++ b/spring-boot-microservice-3-api-gateway/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=api-gateway
 server.port=5555
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_gateway?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=admin
-spring.datasource.username=root
-#spring.datasource.password=AdminGeneral2026$
-spring.datasource.password=
+spring.datasource.username=admin
+#spring.datasource.username=root
+spring.datasource.password=AdminGeneral2026$
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
